[tool.poetry]
name = "matplotlib-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1"
jupyter = "^1.0"
mpld3 = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
